Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectBoolObjField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(true)
        Test(v)
    end

    action Test(Object var)
        Boolean v = cast(Boolean, var)
        if v:GetValue() = true
            output "passed"
        end
    end
end
