Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjBoolObjField.quorum
class Main
    Boolean v
    v:SetValue(true)
    action Main
        Test(v)
    end

    action Test(Number var)
    end
end
